--- a/vetkoek/public/index.html
+++ b/vetkoek/public/index.html
@@ -41,6 +41,13 @@
       href="https://fonts.googleapis.com/css2?family=Merriweather:wght@900&display=swap"
       rel="stylesheet"
     />
+    <style>
+      *{
+        margin: 0;
+        padding: 0;
+        text-decoration: none;
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
