--- a/vetkoek/public/index.html
+++ b/vetkoek/public/index.html
@@ -46,6 +46,7 @@
         margin: 0;
         padding: 0;
         text-decoration: none;
+        color: inherit;
       }
     </style>
   </head>
