Create prelim imbox design

--- a/vetkoek/public/index.html
+++ b/vetkoek/public/index.html
@@ -41,6 +41,8 @@
       href="https://fonts.googleapis.com/css2?family=Merriweather:wght@900&display=swap"
       rel="stylesheet"
     />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined"
+      rel="stylesheet">
     <style>
       *{
         margin: 0;
